--- a/requirements.ipynb
+++ b/requirements.ipynb
@@ -32,6 +32,26 @@
    "source": [
     "!pip install opencv-python ultralytics numpy kaggle jupyter"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53d7d521",
+   "metadata": {},
+   "source": [
+    "## Bibliografía\n",
+    "\n",
+    "Video con las bases de YoloV8, usado para ubicarnos con el modelo:\n",
+    "- [Train Yolov8 object detection on a custom dataset | Step by step guide | Computer vision tutorial](https://www.youtube.com/watch?v=m9fH9OWn8YM)  \n",
+    "\n",
+    "Página wiki oficial de YOLO con todos los detalles que necesitábamos:\n",
+    "- [Explorar Ultralytics YOLOv8](https://docs.ultralytics.com/es/models/yolov8/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0af6fa3a",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
